--- a/.gitconfig
+++ b/.gitconfig
@@ -14,3 +14,4 @@
 	smudge = git-media-smudge %f
 [alias]
   gr = log --graph --full-history --all --color --pretty=tformat:"%x1b[31m%h%x09%x1b[32m%d%x1b[0m%x20%s%x20%x1b[33m(%an)%x1b[0m"
+  lg = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(bold blue)%h%C(reset) - %C(green)%d%C(reset) %C(white)%s%C(reset) %C(dim white)- %C(red)[%an]%C(reset) %C(dim yellow)(%ar)%C(reset)' --all
